--- a/project/package.json
+++ b/project/package.json
@@ -1,29 +1,20 @@
 {
-  "name": "nanosts",
-  "version": "1.0.0",
-  "description": "NanosTS CLI helps you to get started with nanos world TypeScript",
-  "author": "DasDarki @DasDarki",
+  "name": "oclif-hello-world",
+  "description": "oclif example Hello World CLI",
+  "version": "0.0.0",
+  "author": "Salesforce",
   "bin": {
-    "nanosts": "./bin/run"
+    "oex": "./bin/run"
   },
-  "homepage": "https://github.com/NanosWorldTS/nanos-typescript-cli",
-  "license": "GPL-3.0",
-  "main": "dist/index.js",
-  "repository": "NanosWorldTS/nanos-typescript-cli",
-  "files": [
-    "/bin",
-    "/dist",
-    "/npm-shrinkwrap.json",
-    "/oclif.manifest.json"
-  ],
+  "bugs": "https://github.com/oclif/hello-world/issues",
   "dependencies": {
-    "@oclif/core": "^1.13.10",
+    "@oclif/core": "^1",
     "@oclif/plugin-help": "^5",
-    "inquirer": "8.0.0"
+    "@oclif/plugin-plugins": "^2.0.1"
   },
   "devDependencies": {
+    "@oclif/test": "^2",
     "@types/chai": "^4",
-    "@types/inquirer": "^9.0.1",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.9.4",
     "chai": "^4",
@@ -38,14 +29,37 @@
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "files": [
+    "/bin",
+    "/dist",
+    "/npm-shrinkwrap.json",
+    "/oclif.manifest.json"
+  ],
+  "homepage": "https://github.com/oclif/hello-world",
+  "keywords": [
+    "oclif"
+  ],
+  "license": "MIT",
+  "main": "dist/index.js",
   "oclif": {
-    "bin": "nanosts",
-    "dirname": "nanosts",
+    "bin": "oex",
+    "dirname": "oex",
     "commands": "./dist/commands",
     "plugins": [
-      "@oclif/plugin-help"
-    ]
+      "@oclif/plugin-help",
+      "@oclif/plugin-plugins"
+    ],
+    "topicSeparator": " ",
+    "topics": {
+      "hello": {
+        "description": "Say hello to the world and others"
+      }
+    }
   },
+  "repository": "oclif/hello-world",
   "scripts": {
     "build": "shx rm -rf dist && tsc -b",
     "lint": "eslint . --ext .ts --config .eslintrc",
@@ -55,12 +69,5 @@
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md"
   },
-  "engines": {
-    "node": ">=12.0.0"
-  },
-  "bugs": "https://github.com/NanosWorldTS/nanos-typescript-cli/issues",
-  "keywords": [
-    "oclif"
-  ],
   "types": "dist/index.d.ts"
 }
