--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   "dependencies": {
     "@oclif/core": "^1.13.10",
     "@oclif/plugin-help": "^5",
-    "inquirer": "8.0.0"
+    "inquirer": "8.0.0",
+    "listr": "^0.14.3",
+    "node-fetch": "2",
+    "rxjs": "^7.5.6"
   },
   "devDependencies": {
     "@types/chai": "^4",
     "@types/inquirer": "^9.0.1",
+    "@types/listr": "^0.14.4",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.9.4",
     "chai": "^4",
